[package]
name = "rust_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_code"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }
lazy_static = "1.4.0"
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.5.0"
rusqlite = "0.26.0"
chrono = "0.4"
ctrlc = "3.2.1"
flate2 = "1.0.28"
rustc-hash = "2.1.1"
